--- a/styles.css
+++ b/styles.css
@@ -240,3 +240,18 @@ footer {
   margin-top: 4rem;
   font-size: 0.9rem;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
